products/usage-ops/deploy/k8s/overlays/staging/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: usage-ops-staging
  labels:
    nafura.io/app: usage-ops
    nafura.io/env: staging
