products/usage-ops/deploy/k8s/overlays/staging/patch-backend-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-ops-backend
spec:
  template:
    spec:
      containers:
        - name: usage-ops-backend
          imagePullPolicy: IfNotPresent
