products/usage-ops/deploy/k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usage-ops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
spec:
  ingressClassName: nginx
  tls: []
  rules:
    - host: usage-ops.nafuralabs.staging
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: usage-ops-backend
                port:
                  number: 8087
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usage-ops-web
                port:
                  number: 80
